--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".IntroActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -17,6 +17,13 @@
         </intent-filter>
     </activity>
         <activity android:name=".NameActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.EDIT" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        <activity android:name=".EmailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
 
